--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <section id="introduction">
-            <p id="namnyrke">Hi! I'm Alva Stern, UX/UI-designer & front-end developer</p>
+            <p id="namnyrke">Hi! I'm Alva Stern, Digital designer & front-end developer</p>
             <div id="horisont">
                 <div>
                     <img src="images/potratt.jpg" id="poträtt" alt="Portrait of Alva Stern">
@@ -45,7 +45,7 @@
                 </div>
 
                 <div id="educationUX">
-                    <h3><b>Education:</b> UX/UI</h3>
+                    <h3><b>Education:</b> Digital design</h3>
                     <p><b>School:</b> Halmstad University</p>
                     <p><b>Program: </b><a href="https://www.hh.se/utbildning/program/digital-design-och-innovation.html" target="_blank" class="lineforlinks">Digital Design and Innovation</a></p>
                 </div>
