--- a/volvo.html
+++ b/volvo.html
@@ -34,7 +34,7 @@
           <div id="displaymeintheproject">
             <div>
               <h2 id="rubrikvolvo">Lock App: Volvo Cars</h2>
-              <h3 id="underrubrikvolvo">Designstudio, Maj 2023, UX/UI-design</h3>
+              <h3 id="underrubrikvolvo">Designstudio, May 2023, UX/UI-design</h3>
             </div>
 
             <div  id="meintheproject">
