--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <section id="introduction">
-            <p id="namnyrke">Hi! I'm Alva Stern, Digital designer & front-end developer</p>
+            <p id="namnyrke">Hi! I'm Alva Stern, UX/UI-designer & front-end developer</p>
             <div id="horisont">
                 <div>
                     <img src="images/potratt.jpg" id="poträtt" alt="Portrait of Alva Stern">
@@ -45,7 +45,7 @@
                 </div>
 
                 <div id="educationUX">
-                    <h3><b>Education:</b> Digital design</h3>
+                    <h3><b>Education:</b> UX/UI</h3>
                     <p><b>School:</b> Halmstad University</p>
                     <p><b>Program: </b><a href="https://www.hh.se/utbildning/program/digital-design-och-innovation.html" target="_blank" class="lineforlinks">Digital Design and Innovation</a></p>
                 </div>
@@ -86,12 +86,12 @@
             <h2 id="designprojects">Design Projects</h2>
 
             <div id="designstudios">
-                <a href="volvo.html">
-                    <div id="designstudio1">
-                        <img src="images/volvobild.jpg" alt="Volvo Lock App">
-                        <div id="mellanrumdesignstudio1">
-                            <p id="larubrik">Lock App: Volvo Cars</p>
-                            <p id="lainriktning">UX/UI-design</p>
+                <a href="dizparc.html">
+                    <div id="designstudio3">
+                        <img src="imagesDIZPARC/workspace-1280538_1280.jpg" alt="">
+                        <div id="mellanrumdesignstudio3">
+                            <p id="DizparcRubrik">Procurement tool: Dizparc 2025</p>
+                            <p id="DizparcInriktning">UX/UI-design</p>
                         </div>
                     </div>
                 </a>
@@ -100,8 +100,18 @@
                     <div id="designstudio2">
                         <img src="images/eleikobild.jpg" alt="Eleiko Strength App">
                         <div id="mellanrumdesignstudio2">
-                            <p id="saasrubrik">Strength as a Service: ELEIKO</p>
+                            <p id="saasrubrik">Strength as a Service: ELEIKO 2024</p>
                             <p id="saasinriktning">Service design</p>
+                        </div>
+                    </div>
+                </a>
+
+                <a href="volvo.html">
+                    <div id="designstudio1">
+                        <img src="images/volvobild.jpg" alt="Volvo Lock App">
+                        <div id="mellanrumdesignstudio1">
+                            <p id="larubrik">Lock App: Volvo Cars 2023</p>
+                            <p id="lainriktning">UX/UI-design</p>
                         </div>
                     </div>
                 </a>
@@ -116,7 +126,7 @@
                     <div id="portfolio">
                         <img src="images/mittprotfoliobild.jpg" alt="Image of my portfolio" id="imagemyportfoliohemskärm">
                         <div id="mellanrumportfolio">
-                            <p id="myportfolio">My Portfolio</p>
+                            <p id="myportfolio">My Portfolio 2024</p>
                             <p id="MPinriktning">HTML, CSS</p>
                         </div>
                     </div>
