--- a/dizparc.html
+++ b/dizparc.html
@@ -38,7 +38,7 @@
     
               <div id="infoDizparc">
                 <p><b>Collaborator:</b> Dizparc</p>
-                <p><b>Tools:</b> Figma, Miro</p>
+                <p><b>Tools:</b> Figma, Miro, Teams</p>
                 <p><b>Reference:</b> Terese (Dizparc Halmstad) +46 760527223 / terese.wahlstedt@dizparc.se</p>
               </div>
             </div>
