--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div id="programmingstudios">
                 <a href="TWATDT.html">
                     <div id="portfolio">
-                        <img src="Images-VRM/Bakgrundsbild.png" alt="Image of my portfolio" id="imagemyportfoliohemskärm">
+                        <img src="Images-VRM/Bakgrundsbild.png" alt="Image of food" id="imagemyportfoliohemskärm">
                         <div id="mellanrumportfolio">
                             <p id="myportfolio">The World Around the Dinner Table 2025</p>
                             <p id="MPinriktning">HTML, CSS, JS</p>
